<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1AFFF600"
    tools:context=".Login_Activity">

    <ImageView
        android:id="@+id/Github_Link1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/github" />

    <TextView
        android:id="@+id/Project_Link1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/Create_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/login_account"
        android:textColor="#E91E63"
        android:textSize="36sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email_Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Create_TV"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/ED_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PassWord_Layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email_Layout"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <EditText
            android:id="@+id/ED_PassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PassWord_Layout"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/register_button_shape"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Register_Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_Button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:text="@string/not_register_create_new_account"
        android:textColor="@color/purple_700" />
</RelativeLayout>